Fix upload button display
Was getting cut off at 100px. I wonder why.

--- a/includes/extensions/edit-entry/assets/css/source/gv-edit-entry-admin.less
+++ b/includes/extensions/edit-entry/assets/css/source/gv-edit-entry-admin.less
@@ -154,7 +154,7 @@ AND ANY CHANGES MADE HERE WILL BE OVERWRITTEN.
 	/* entry edit ----------------------------------------------------*/
 
 	.gform_button_select_files{
-	    width: 100px !important;
+	    width: auto !important;
 	}
 
 	.gform_fileupload_multifile .gform_drop_area {
